# ONTAP-mode-shell

./: .gitignore  README.md  pyproject.toml
